# dataset-metawriter-for-cyber

./: .gitignore  CHANGELOG.md  LICENSE  README-EN.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  test-config.yaml
examples/: README.md
examples/config-examples/: advanced-config.yaml  basic-config.yaml
examples/dataset-examples/: sample-readme.md
examples/output-examples/: sample-meta.json  sample-meta.md
src/dsmeta/: __init__.py  __main__.py  cli.py  config.py  export.py  graph.py  models.py  monitor.py  parsers.py
src/dsmeta/nodes/: __init__.py  generate_markdown.py  preliminary_analysis.py  read_sample.py  scan_parse.py  synthesize_populate.py  validate_postprocess.py  web_search.py  write_outputs.py
templates/: default.md.j2
