[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsmeta"
version = "1.2.0"
description = "数据集元数据自动标注工具 - 基于LangGraph和大语言模型"
readme = "README.md"
authors = [
    {name = "Dataset Annotation Team", email = "team@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["dataset", "metadata", "annotation", "nlp", "llm"]
dependencies = [
    "pydantic>=2.0.0",
    "langgraph>=0.1.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0.0",
    "structlog>=23.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "watchdog>=3.0.0",
    "httpx>=0.25.0",
    "langdetect>=1.0.9",
    "chardet>=5.0.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
dsmeta = "dsmeta.cli:main"

[project.urls]
Homepage = "https://github.com/example/dsmeta"
Documentation = "https://docs.example.com/dsmeta"
Repository = "https://github.com/example/dsmeta"
Issues = "https://github.com/example/dsmeta/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true